crates/guatiao/include/guatiao.h

typedef enum guatiao_status guatiao_status;
typedef uint32_t guatiao_status;
typedef struct guatiao_registry guatiao_registry;
typedef struct guatiao_str {
  const uint8_t *ptr;
  size_t len;
} guatiao_str;
typedef struct guatiao_alloc {
  uint32_t struct_size;
  void *ctx;
  void *(*alloc)(void *ctx, size_t size, size_t align);
  void (*free)(void *ctx, void *ptr, size_t size, size_t align);
  void (*release)(void *ctx);
} guatiao_alloc;
typedef union guatiao_payload {
  uint8_t b;
  struct guatiao_string text;
  struct guatiao_buffer bytes;
  struct guatiao_list list;
  struct guatiao_map map;
} guatiao_payload;
typedef struct guatiao_value {
  uint32_t tag;
  uint32_t _pad;
  union guatiao_payload payload;
} guatiao_value;
typedef const struct guatiao_map *guatiao_map_ptr;
typedef struct guatiao_host_services {
  uint32_t struct_size;
  void *ctx;
  guatiao_status (*get)(void *ctx, struct guatiao_str key, const struct guatiao_provider_info **out);
  guatiao_status (*list)(void *ctx,
                         struct guatiao_str kind,
                         const struct guatiao_provider_info **out,
                         size_t cap,
                         size_t *total);
  const struct guatiao_alloc *(*alloc)(void *ctx);
} guatiao_host_services;
typedef struct guatiao_host_info {
  uint32_t struct_size;
  uint32_t abi_version;
  struct guatiao_str host_id;
  struct guatiao_str host_version;
  const struct guatiao_alloc *alloc;
  guatiao_map_ptr meta;
  const struct guatiao_host_services *services;
} guatiao_host_info;
typedef struct guatiao_providers {
  const struct guatiao_provider_info *ptr;
  size_t len;
  size_t stride;
} guatiao_providers;
typedef struct guatiao_library_info {
  uint32_t struct_size;
  uint32_t abi_version;
  struct guatiao_str id;
  struct guatiao_str version;
  struct guatiao_providers providers;
  guatiao_map_ptr meta;
  guatiao_status (*unload)(void);
} guatiao_library_info;
guatiao_status guatiao_registry_retire(struct guatiao_registry *reg, struct guatiao_str key);
guatiao_status guatiao_registry_unload(struct guatiao_registry *reg, struct guatiao_str key);
guatiao_status guatiao_registry_register_entry(struct guatiao_registry *reg,
                                               struct guatiao_str name,
                                               const struct guatiao_library_info *(*entry)(const struct guatiao_host_info*),
                                               const struct guatiao_alloc *alloc,
                                               struct guatiao_value *out);
guatiao_status guatiao_registry_scan_dir(struct guatiao_registry *reg,
                                         struct guatiao_str dir,
                                         bool descending,
                                         const struct guatiao_alloc *alloc,
                                         struct guatiao_value *out);
guatiao_status guatiao_registry_scan_dir_rules(struct guatiao_registry *reg,
                                               struct guatiao_str dir,
                                               bool descending,
                                               struct guatiao_str rules,
                                               const struct guatiao_alloc *alloc,
                                               struct guatiao_value *out);
guatiao_status guatiao_registry_scan_path(struct guatiao_registry *reg,
                                          struct guatiao_str spec,
                                          bool descending,
                                          struct guatiao_str rules,
                                          const struct guatiao_alloc *alloc,
                                          struct guatiao_value *out);
guatiao_status guatiao_registry_providers(const struct guatiao_registry *reg,
                                          struct guatiao_str kind,
                                          const struct guatiao_alloc *alloc,
                                          struct guatiao_value *out);
guatiao_status guatiao_registry_why_not(const struct guatiao_registry *reg,
                                        struct guatiao_str kind,
                                        const struct guatiao_alloc *alloc,
                                        struct guatiao_value *out);
guatiao_status guatiao_registry_set_priority(struct guatiao_registry *reg,
                                             struct guatiao_str id,
                                             int32_t priority);
const void *guatiao_registry_provider_vtable(const struct guatiao_registry *reg,
                                             struct guatiao_str key,
                                             size_t *size_out);
const struct guatiao_value *guatiao_schema_resolve(const struct guatiao_value *schema,
                                                   struct guatiao_str key);
guatiao_status guatiao_schema_flat_keys(const struct guatiao_value *schema,
                                        struct guatiao_str key,
                                        const struct guatiao_alloc *alloc,
                                        struct guatiao_value *out);
guatiao_status guatiao_schema_flatten(const struct guatiao_value *schema,
                                      struct guatiao_str key,
                                      const struct guatiao_value *value,
                                      const struct guatiao_alloc *alloc,
                                      struct guatiao_value *out);