bindings/dart/lib/src/bindings.g.dart


  ffi.Pointer<ffi.Void> guatiao_registry_provider_table(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    guatiao_str kind,
    ffi.Pointer<ffi.Size> size_out,
  ) {
    return _guatiao_registry_provider_table(
      reg,
      key,
      kind,
      size_out,
    );
  }

  late final _guatiao_registry_provider_tablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              guatiao_str,
              ffi.Pointer<ffi.Size>)>>('guatiao_registry_provider_table');
  late final _guatiao_registry_provider_table =
      _guatiao_registry_provider_tablePtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<guatiao_registry>,
              guatiao_str, guatiao_str, ffi.Pointer<ffi.Size>)>();

  ffi.Pointer<ffi.Void> guatiao_registry_provider_vtable(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
    ffi.Pointer<ffi.Size> size_out,
  ) {
    return _guatiao_registry_provider_vtable(
      reg,
      key,
      size_out,
    );
  }

  late final _guatiao_registry_provider_vtablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<ffi.Size>)>>('guatiao_registry_provider_vtable');
  late final _guatiao_registry_provider_vtable =
      _guatiao_registry_provider_vtablePtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<guatiao_registry>,
              guatiao_str, ffi.Pointer<ffi.Size>)>();

  int guatiao_registry_providers(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str kind,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_providers(
      reg,
      kind,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_providersPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_providers');
  late final _guatiao_registry_providers =
      _guatiao_registry_providersPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_register_entry(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str name,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Pointer<guatiao_library_info> Function(
                    ffi.Pointer<guatiao_host_info>)>>
        entry,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_register_entry(
      reg,
      name,
      entry,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_register_entryPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Pointer<guatiao_library_info> Function(
                          ffi.Pointer<guatiao_host_info>)>>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_register_entry');
  late final _guatiao_registry_register_entry =
      _guatiao_registry_register_entryPtr.asFunction<
          int Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Pointer<guatiao_library_info> Function(
                          ffi.Pointer<guatiao_host_info>)>>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_retire(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
  ) {
    return _guatiao_registry_retire(
      reg,
      key,
    );
  }

  late final _guatiao_registry_retirePtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_retire');
  late final _guatiao_registry_retire = _guatiao_registry_retirePtr
      .asFunction<int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_scan_dir(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str dir,
    bool descending,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_scan_dir(
      reg,
      dir,
      descending,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_scan_dirPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Bool,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_scan_dir');
  late final _guatiao_registry_scan_dir =
      _guatiao_registry_scan_dirPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str, bool,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_scan_dir_rules(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str dir,
    bool descending,
    guatiao_str rules,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_scan_dir_rules(
      reg,
      dir,
      descending,
      rules,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_scan_dir_rulesPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Bool,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_scan_dir_rules');
  late final _guatiao_registry_scan_dir_rules =
      _guatiao_registry_scan_dir_rulesPtr.asFunction<
          int Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              bool,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_scan_path(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str spec,
    bool descending,
    guatiao_str rules,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_scan_path(
      reg,
      spec,
      descending,
      rules,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_scan_pathPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Bool,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_scan_path');
  late final _guatiao_registry_scan_path =
      _guatiao_registry_scan_pathPtr.asFunction<
          int Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              bool,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>();

  int guatiao_registry_set_priority(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str id,
    int priority,
  ) {
    return _guatiao_registry_set_priority(
      reg,
      id,
      priority,
    );
  }

  late final _guatiao_registry_set_priorityPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Int32)>>('guatiao_registry_set_priority');
  late final _guatiao_registry_set_priority =
      _guatiao_registry_set_priorityPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str, int)>();

  int guatiao_registry_unload(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
  ) {
    return _guatiao_registry_unload(
      reg,
      key,
    );
  }

  late final _guatiao_registry_unloadPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_unload');
  late final _guatiao_registry_unload = _guatiao_registry_unloadPtr
      .asFunction<int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_unload_unchecked(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str key,
  ) {
    return _guatiao_registry_unload_unchecked(
      reg,
      key,
    );
  }

  late final _guatiao_registry_unload_uncheckedPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<guatiao_registry>,
              guatiao_str)>>('guatiao_registry_unload_unchecked');
  late final _guatiao_registry_unload_unchecked =
      _guatiao_registry_unload_uncheckedPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str)>();

  int guatiao_registry_why_not(
    ffi.Pointer<guatiao_registry> reg,
    guatiao_str kind,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_registry_why_not(
      reg,
      kind,
      alloc,
      out,
    );
  }

  late final _guatiao_registry_why_notPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_registry>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_registry_why_not');
  late final _guatiao_registry_why_not =
      _guatiao_registry_why_notPtr.asFunction<
          int Function(ffi.Pointer<guatiao_registry>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_schema_flat_keys(
    ffi.Pointer<guatiao_value> schema,
    guatiao_str key,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_schema_flat_keys(
      schema,
      key,
      alloc,
      out,
    );
  }

  late final _guatiao_schema_flat_keysPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_schema_flat_keys');
  late final _guatiao_schema_flat_keys =
      _guatiao_schema_flat_keysPtr.asFunction<
          int Function(ffi.Pointer<guatiao_value>, guatiao_str,
              ffi.Pointer<guatiao_alloc>, ffi.Pointer<guatiao_value>)>();

  int guatiao_schema_flatten(
    ffi.Pointer<guatiao_value> schema,
    guatiao_str key,
    ffi.Pointer<guatiao_value> value,
    ffi.Pointer<guatiao_alloc> alloc,
    ffi.Pointer<guatiao_value> out,
  ) {
    return _guatiao_schema_flatten(
      schema,
      key,
      value,
      alloc,
      out,
    );
  }

  late final _guatiao_schema_flattenPtr = _lookup<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<guatiao_value>,
              guatiao_str,
              ffi.Pointer<guatiao_value>,
              ffi.Pointer<guatiao_alloc>,
              ffi.Pointer<guatiao_value>)>>('guatiao_schema_flatten');
  late final _guatiao_schema_flatten = _guatiao_schema_flattenPtr.asFunction<
      int Function(
          ffi.Pointer<guatiao_value>,
          guatiao_str,
          ffi.Pointer<guatiao_value>,
          ffi.Pointer<guatiao_alloc>,
          ffi.Pointer<guatiao_value>)>();

  ffi.Pointer<guatiao_value> guatiao_schema_resolve(
    ffi.Pointer<guatiao_value> schema,
    guatiao_str key,
  ) {
    return _guatiao_schema_resolve(
      schema,
      key,
    );
  }
